# bbml-scip

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/configs/: ablations.yaml  baselines.yaml
benchmarks/eval/: branching_accuracy.py  kpis.py  paper_table.py  perf_profile.py  plot_alpha.py  summary_table.py
benchmarks/instances/: ca_test.txt  ca_train.txt  ca_val.txt  cfl_test.txt  cfl_train.txt  cfl_val.txt  mis_test.txt  mis_train.txt  mis_val.txt  sc_test.txt  sc_train.txt  sc_val.txt
benchmarks/pipeline/: 00_generate.sh  01_collect.sh  02_convert.sh  03_train.sh  04_calibrate_export.sh  05_run.sh  collect_task.py  common.sh  compact_existing_telemetry.py  generate_instances.py  learn2branch_stage.sh  parse_scip_log.py  prepare_learn2branch_stage.py  run_all.sh  run_benchmark_task.py  run_output_task.py  run_train_task.py  task_runner.py
configs/model/: branch_gnn.yaml
configs/solver/: integration.yaml
configs/train/: ranking.yaml
cpp/: CMakeLists.txt
cpp/include/bbml/: branchrule_ml.hpp  feature_extractor.hpp  nodesel_ml.hpp  onnx_runner.hpp  telemetry_logger.hpp
cpp/src/: branchrule_ml.cpp  feature_extractor.cpp  nodesel_ml.cpp  onnx_runner.cpp  plugin_register.cpp  telemetry_logger.cpp
examples/: Makefile  README.md  bbml_run.cpp
examples/data/: branching.lp  toy.lp
examples/data/logs/: train.ndjson
examples/data/train/: 10teams.lp  22433.lp  23588.lp  50v-10.lp  a1c1s1.lp  a2c1s1.lp  acc-tight2.lp  acc-tight4.lp  acc-tight5.lp  aflow30a.lp  aflow40b.lp  aligninq.lp  app1-1.lp  app2-1.lp  app2-2.lp  app3.lp  arki001.lp  assign1-5-8.lp  b-ball.lp  b1c1s1.lp  b2c1s1.lp  beasleyC1.lp  beasleyC2.lp  beasleyC3.lp  beavma.lp  berlin.lp  berlin_5_8_0.lp  bienst1.lp  binkar10_1.lp  blend2.lp  bley_xs2.lp  bnatt400.lp  bnatt500.lp  bppc4-08.lp  bppc8-02.lp  bppc8-09.lp  brasil.lp  breastcancer-regularized.lp  chromaticindex32-8.lp  control20-5-10-5.lp  (+217 more)
examples/data/val/: bienst2.lp  ej.lp  enlight11.lp  enlight4.lp  enlight9.lp  flugpl.lp  g503inf.lp  gen-ip002.lp  gen-ip054.lp  mod008inf.lp  neos-1425699.lp  neos-3046601-motu.lp  neos-5140963-mincio.lp  neos-5192052-neckar.lp  nexp-50-20-1-1.lp  noswot.lp  opt1217.lp  p0201.lp  p2m2p1m1p0n100.lp  ran12x21.lp  ran13x13.lp  rlp1.lp  stein45inf.lp  stein9inf.lp  supportcase14.lp  supportcase16.lp  timtab1.lp  timtab1CUTS.lp  v1.lp
py/: pyproject.toml
py/bbml/bench/: latency.py
py/bbml/data/: json_to_parquet.py  loader.py  schema.py  telemetry_compact.py
py/bbml/export/: export_onnx.py
py/bbml/models/: gnn.py  graph_ranker.py  heads.py
py/bbml/train/: baselines.py  calibrate.py  train_rank.py
results/: README.md
schemas/: parquet_fields.md  telemetry.schema.json
scripts/: evaluate_suite.sh  run_py_tests.py  run_scip_with_bbml.sh  run_scip_with_ml.sh  test_all.sh  train_branch_proxy.sh
tests/cpp/: CMakeLists.txt  test_branchrule_choose.cpp  test_branchrule_params.cpp  test_feature_extractor.cpp
tests/py/: test_branching_accuracy.py  test_calibrate_export.py  test_dataset.py  test_eval_metrics.py  test_generate_instances.py  test_gnn_shapes.py  test_json_to_parquet.py  test_schema.py  test_telemetry_compact.py
