option(BBML_WITH_LP_STATS "Collect LP refactor/condition stats via LPI" OFF)

file(GLOB BBML_SRC src/*.cpp)
add_library(bbml_scip MODULE ${BBML_SRC})
set_target_properties(bbml_scip PROPERTIES POSITION_INDEPENDENT_CODE ON OUTPUT_NAME "bbml_scip")
target_include_directories(bbml_scip PRIVATE ${SCIP_INCLUDE_DIR} ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(bbml_scip PRIVATE ${SCIP_LIBRARY})
if(BBML_WITH_ONNX)
  target_link_libraries(bbml_scip PRIVATE ${BBML_ONNXRUNTIME_LIB})
  target_compile_definitions(bbml_scip PRIVATE BBML_WITH_ONNX=1)
  target_include_directories(bbml_scip PRIVATE ${BBML_ORT_HINT_INC_DIRS})
else()
  message(STATUS "ONNX support disabled")
endif()
if(BBML_WITH_LP_STATS)
  target_compile_definitions(bbml_scip PRIVATE BBML_WITH_LP_STATS=1)
endif()
